--- a/config/ImageMagickSharp.dll.config
+++ b/config/ImageMagickSharp.dll.config
@@ -1,5 +1,5 @@
 <configuration>
-  <dllmap dll="CORE_RL_Wand_.dll" target="libMagickWand-6.Q16.so.2" os="linux"/>
-  <dllmap dll="CORE_RL_Wand_.dll" target="libMagickWand-6.so" os="freebsd,openbsd,netbsd"/>
+  <dllmap dll="CORE_RL_Wand_.dll" target="/usr/lib/libMagickWand-7.Q16HDRI.so.0" os="linux"/>
+  <dllmap dll="CORE_RL_Wand_.dll" target="libMagickWand-7.so" os="freebsd,openbsd,netbsd"/>
   <dllmap dll="CORE_RL_Wand_.dll" target="./MediaInfo/osx/libmediainfo.dylib" os="osx"/>
 </configuration>
